# NLPChatbot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/.ipynb_checkpoints/: test_rag_workflow-checkpoint.ipynb
src/: app.py  config.py  ingest.py  rag_chain.py
