[project]
name = "nlp-chatbot"
version = "0.1.0"
description = "RAG chatbot for NLP questions using Jurafsky textbook PDFs"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",
    "streamlit>=1.35.0",
    "python-dotenv>=1.0.0",
    "transformers>=4.40.0,<5.0.0",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
]
